k8s/levelupaccounts/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: levelupaccounts-ingress
  namespace: levelupaccounts
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rate-limit: "100"
    nginx.ingress.kubernetes.io/rate-limit-window: "1m"
spec:
  ingressClassName: nginx
  rules:
  - host: api.thongit.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: levelupaccounts-service
            port:
              number: 80
  tls:
  - hosts:
    - api.thongit.site
    secretName: api-thongit-space-tls
